@@ -1,3 +1,7 @@
+2004-06-20  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Fix some races and cleanups in fuse_read_super()
+	
 2004-06-19  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Requests are allocated at open time
